--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -4,11 +4,17 @@
     <string name="mainactivaty_text_community">社区</string>
     <string name="mainactivaty_text_rss">订阅</string>
 
-    <string name="menu_profile">个人中心</string>
-    <string name="menu_vip">会员中心</string>
-    <string name="menu_history">最近浏览</string>
+    <string name="menu_profile">我的信息</string>
+    <string name="menu_vip">我的会员</string>
+    <string name="menu_theme">个性换肤</string>
+    <string name="menu_post">我的发帖</string>
+    <string name="menu_comments">我的回帖</string>
+    <string name="menu_history">我的阅历</string>
     <string name="menu_favorites">我的收藏</string>
+    <string name="menu_feedback">意见反馈</string>
+
+    <string name="menu_day_mode">日间模式</string>
+    <string name="menu_night_mode">夜间模式</string>
     <string name="menu_settings">设置</string>
-    <string name="menu_share">分享</string>
 
 </resources>
