--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,16 @@
 
     <string name="menu_profile">Profile</string>
     <string name="menu_vip">VIP</string>
-    <string name="menu_history">History</string>
-    <string name="menu_favorites">Favorites</string>
+    <string name="menu_theme">Themes</string>
+    <string name="menu_post">My Posts</string>
+    <string name="menu_comments">My Comments</string>
+    <string name="menu_history">My History</string>
+    <string name="menu_favorites">My Favorites</string>
+    <string name="menu_feedback">Feedback</string>
+
+    <string name="menu_day_mode">Day Mode</string>
+    <string name="menu_night_mode">Night Mode</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_share">Share</string>
 
     <string name="mainactivaty_text_news">News</string>
     <string name="mainactivaty_text_community">Community</string>
