--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,13 @@
     <string name="mainactivaty_tag_news">News</string>
     <string name="mainactivaty_tag_community">Community</string>
     <string name="mainactivaty_tag_rss">RSS</string>
+    
+    <string name="settings_category_user">User</string>
+    <string name="settings_category_settings">Settings</string>
+    <string name="settings_category_about">About</string>
+
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
