--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -17,6 +17,9 @@
     <string name="menu_night_mode">夜间模式</string>
     <string name="menu_settings">设置</string>
 
+    <string name="text_login">登录</string>
+    <string name="text_user">用户</string>
+
     <string name="settings_category_user">账户设置</string>
     <string name="settings_category_settings">基本设置</string>
     <string name="settings_category_about">关于 Echos</string>
