--- a/report/main.tex
+++ b/report/main.tex
@@ -7,6 +7,7 @@
 \usepackage{float}
 \usepackage{graphicx}
 \usepackage{diagbox}
+\usepackage{makecell}
 
 \geometry{left=3.0cm,right=3.0cm,top=3.5cm,bottom=3.5cm}
 
